# AIandMLCourse

./: 03_noise_experiment.py
gui_app/tabs/: tab_forward_prop.py  tab_mlp.py  tab_perceptron.py  tab_universal.py
week3/hw_pyside6/: README.md  main_gui.py  requirements_gui.txt
week3/hw_pyside6/tabs/: tab_activation.py
week4/week4/: main.py  pyproject.toml
week4/week4/core/: trainer.py
week4/week4/docs/superpowers/plans/: 2026-04-01-physics-nn-explorer.md
week4/week4/labs/: lab2_projectile.py
week4/week4/tests/: conftest.py  test_data.py  test_models.py
week4/week4_hw/: README.md
week4/week4_hw/core/: models.py
week4/week4_hw/docs/superpowers/specs/: 2026-04-01-week4-pyside6-design.md
week4/week4_hw/labs/: lab1_1d.py  lab3_overfitting.py  lab4_pendulum.py
week4/week4_hw/tests/: test_trainer.py
